k8s-local/ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-challenge
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: k8schallenge
          servicePort: web
